projects/project-templates/php-fpm-nginx/templates/serviceentry.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: deb1-debian-ext
spec:
  hosts:
  - "*.debian.org"
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
